[package]
name = "rubullet"
version = "0.1.0"
authors = ["Nathan Kent <nkent2@cs.rochester.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.21.0"

[build-dependencies]
cmake = "0.1.42"

[dev-dependencies]
easy-error = "0.3.1"
