[package]
name = "rubullet-ffi"
version = "0.1.0"
authors = ["Nathan Kent <nkent2@cs.rochester.edu>", "Marco Boneberger <m.boneberger@tu-bs.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rubullet_ffi"
src = "src/lib.rs"
[profile.dev]
opt-level = 3

[build-dependencies]
cmake = "0.1.42"

