[package]
name = "rubullet-sys"
version = "0.1.0-alpha-2"
authors = ["Nathan Kent <nkent2@cs.rochester.edu>", "Marco Boneberger <m.boneberger@tu-bs.de>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/neachdainn/rubullet"
description = "Compiles bullet3 and exposes rust bindings to the C API"
categories = ["science::robotics", "simulation"]
keywords = ["pybullet", "bullet", "bullet3", "physics", "robotics"]
exclude = [
    "bullet3/libbullet3/data/*",
    "!bullet3/libbullet3/data/sphere8.mtl",
    "bullet3/libbullet3/examples/pybullet",
    "bullet3/libbullet3/examples/ThirdPartyLibs/openvr",
    "bullet3/libbullet3/docs",
    "bullet3/libbullet3/test"
]

[build-dependencies]
cmake = "0.1.42"
