[package]
name = "rubullet"
version = "0.1.0"
authors = ["Nathan Kent <nkent2@cs.rochester.edu>", "Marco Boneberger <m.boneberger@tu-bs.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rubullet"
path = "src/lib.rs"

[[example]]
name = "panda_demo"
path = "examples/panda_demo.rs"

[[example]]
name = "hello_rubullet"
path = "examples/hello_rubullet.rs"

[[example]]
name = "inverse_dynamics"
path = "examples/inverse_dynamics.rs"
[profile.dev]
opt-level = 3
incremental = true

[dependencies]
nalgebra = "0.23"
image = "0.23.12"
rubullet-ffi = { path = "../rubullet-ffi" }

[dev-dependencies]
easy-error = "0.3.1"
